--- a/style.styl
+++ b/style.styl
@@ -81,6 +81,9 @@ $color['menu-text'] = #FFF
   &-Contact
     display: block
 
+    &:first-child
+      margin-bottom: 34px
+
 .Link
   color: inherit
   text-decoration: none
