--- a/index.jade
+++ b/index.jade
@@ -12,6 +12,8 @@ include node_modules/bemto.jade/bemto
       http-equiv="X-UA-Compatible",
       content="IE=EmulateIE7,IE=edge")
 
+    title Лучик — приют для кошек
+
     link(
       rel="stylesheet",
       href="style.css")
