--- a/style.styl
+++ b/style.styl
@@ -66,6 +66,8 @@ $color['menu-text'] = #FFF
     font-weight: 100
     letter-spacing: 4px
 
+    color: #E38636
+
   &-Subtitle
     padding: 1em 0
     margin: 0
