Fixed underline and alignment in ie

--- a/index.jade
+++ b/index.jade
@@ -25,7 +25,7 @@ include node_modules/bemto.jade/bemto
 
       +e.UL.Contacts
         +e.LI.Contact
-          +b.Link_vk(href="https://vk.com/luchik_dubna") luchik_dubna
+          +b.Link_vk(href="https://vk.com/luchik_dubna") luchik<span class="is-vhidden">_</span>dubna
         +e.LI.Contact
           +b.Link(href="tel:89265556869") 8 (926) 555-68-69
         +e.LI.Contact
